[package]
name = "tiny-vm"
description = "A VM for the TINY toy assembly language"
license = "MIT"
repository = "https://github.com/brightly-salty/tiny-vm"
version = "0.1.0"
edition = "2021"
keywords = ["cli", "parser"]
categories = ["command-line-utilities"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.4.14", features = ["derive"] }
rand = "0.8.5"
