[package]
name = "tiny-vm"
description = "A VM for the TINY toy assembly language"
license = "MIT"
repository = "https://github.com/brightly-salty/tiny-vm"
version = "0.1.0"
edition = "2021"
keywords = ["cli", "parser"]
categories = ["command-line-utilities"]
readme = "README.md"
default-run = "tide"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.4.14", features = ["derive"] }
eframe = {version = "0.27.0", features=["persistence"]}
egui = "0.27.0"
egui_dock = "0.12.0"
egui_extras = "0.27.0"
rand = "0.8.5"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"

getrandom = { version = "0.2", features = ["js"] }
serde = "1.0.197"
rfd = { version = "0.14.1", features = ["common-controls-v6"] }
anyhow = "1.0.81"
pollster = "0.3.0"

[[bin]]
name = "tiny-vm"
path = "src/tiny-vm.rs"

[[bin]]
name = "tide"
path = "src/tide.rs"

[profile.release]
opt-level = 2 # fast and small wasm

[patch.crates-io]
